--- a/Harvard/Page02.html
+++ b/Harvard/Page02.html
@@ -130,7 +130,7 @@
 		<tr style="height: 24px">
 			<td class="s4">&nbsp;</td>
 			<td class="s5" colspan="2" rowspan="3">
-			<div style="width:157px;height:74px;"><img src="https://lh7-rt.googleusercontent.com/u/0/sheets/APBGjhYRFVAwV0OeeH3ENLGR71eCURLLXMJORWZ9OmHtihnl95cLLxgLY1c17c3dic35lgSHYX47yFeznetbMKYZ8sxXIecf1665bCeYNw2ZaEgk5ZG2_fqjtRMPnqLB7dQOFJos_UHS84hDWAzHyEDc4IBzdMrBhNrBqM_cf5WUP8QCB6QdidkTWGMAd-_yDHHcsxDhX0_VlVZMZAG_uBed9qKhLdoa7qBf2tM78mRrJWiWl6Leokv-2nFnGqnoJcbqblIzU4xOYd53bZOdFMhUsar5ab84QURftof-YbnoI9upT_jH7icQxiPqUrObwGthWE2tRB6Fy84kH8tQfhozV6e182wC1bNlJ8Ty6xSsDtPj2a_mKwLVIQcVp4Fcf0yTLQHYkwQMd3JYVkRhxVvUTcY1KhKEVFyccuaZTapLwFqEB4Qn-AOXGnFX_5pqMT46fTlyRlAFw4UIgv7qtaz0GMGYfnsRNPOVXyxVNDZ_uLnHDXfZF-LNzX-f6rqlfrqOTmNiKhmA6k5TRXab8RgOl1cI6LBNfqqv1BsUqG6M288XxmxLlhBTsWE82yOOvpD4pMsWcOubJBmsfvtyoTdqWWMxIuIZTaVginJ0ksHjD1jxsjKHSqtiYvk5TKwcncZ5xyC7_FKvRO54FNAm0NNdRzRywZW9e7f9cP1huSG-89IMvTDq8EHc_Xv3AM-uZ4l2JYQVz1XhlouLTSOkAtS8Huhf8X-XMIMha6K0pg9j9yMLeU-qaFQ1pRm4WyYQLu07u_PNPwzaskV2wfyHg37a2MpJKFBhfIjTusQ5Whh4Y83JkIzLq814hcgve05vjmpxllNXLZmuUoAbmMBaLz6w5wYCYQ9ktOH6RzJGsBciYggSrhxo3pu9pIBNrDQiJiIgGcj-KP50tT26FEmC2e0Jk5CLowx-oVnrszeaXY5d1Vs9oXlAICkVO4ODu1rs3ot72eNDROREJ5rFaVBgKD69oRoDr8KVHW_XNQP4yfI0TD6hqcWdlkcULbY9b-3T71AKCE1meXQqYj2lV1ruDCMzie9AezZaRuN6Kio_2ip84M6r7WnLlyY2=w157-h74" style="width:inherit;height:inherit;object-fit:scale-down;object-position:center bottom;" /></div>
+			<div style="width:135px;height:85px;"><img src="https://i.meee.com.tw/LHPFKHJ.jpg" style="width:inherit;height:inherit;object-fit:scale-down;object-position:center bottom;" /></div>
 			</td>
 			<td class="s6" colspan="3" dir="ltr" rowspan="4">高雄大學城哈佛大樓車位租賃</td>
 			<td class="s7" dir="ltr">出租案件</td>
