--- a/Harvard/Page03.html
+++ b/Harvard/Page03.html
@@ -127,7 +127,7 @@
 		<tr style="height: 24px">
 			<td class="s3">&nbsp;</td>
 			<td class="s4" colspan="2" rowspan="3">
-			<div style="width:157px;height:74px;"><img src="https://lh7-rt.googleusercontent.com/u/0/sheets/APBGjhZupH-oUHE3e6ZhVP4HUI6HLGadDUFGzPpNmEXFHD3aXzmi88CkRFnxs3zmMf-sCmoFBRx8u8usPtpsBf4AlmSg1G_xtaDkqLM0A98Uy4k1_66DxFhuDBtWU5HyAHTk0Jz7lw9F_Usk74MPLanlrPI1VLkQzG-0L9CO9nnnWL6uRm3XS8bbdnN7Lx5RjLGXMQ2bFDhQ52SrY-vxpamVkCr1J7sFrwYYtar8T_OCSldqpyKEh9emYOGUxq1vdYp470PqaPVRN24OefwX4g8vxgc4_X9NeeD0vle8ft2p4pAjj8UKJu3ANNU5zY_b2FJ5nvKQ7x3X1_rFSDe0NK7aaAMjp53dki1d04ag5eA8bjsOPj0LLkQqJlfJohH7zDV2qOwDqX_cjsbKtysQQjs4avuioX8UjOr5_5YuYcWv3V-pQbszKFzpLgTViUQNnXNQqP24-BA-fwXlDI5gnqSBXmjWT8LQe030audibaMG2DWfAtu0z-G6R4VwHdLwNUhDcmDNL3qJYpvePgaH74UU-XMWWbMVBTcCummCWrWaq99Ztgfac_rOthfNf-w7Tq7y1-K8QkDvv8gyW7Ls2uSl9KK0O1xZlXBZhb3yBItzvwTj7Xx9XQywdNjayVCR-BJMHgsPKENZiVhVavhXIKH599L1WmoE3O9KjMBeKvSOfwD8Rad_o-4kmzbOQrfc6_SNu3v5oyY2cCXTwYfBpUFbJYI6oRq3Ka9AcJStL1vPMNV11q4bCTlCI-muygYya0fXkYzNVfbq4FRZNOKrjBP5KERSAKPZ_cn5TUVJBaIFd_FwI2yxOXjPl6cJnPpJZrSShQVcPRkZqXu1T8u4csPiOYSHpSMsrY_DFZlu_YUexJ46DvPt1pp54d7Rq8WPuV7rCL1PwDby-GT2Dqg6yP4sYTL5ynMdNbPkoW1eR6sYPwzPYjOzZ7SL6ak4zRWTiUVp6N9OrWQ_F5TzQSBIQj6auxPD03B1SxoJI4DJF25O0CatS2WODu-NzZ5RbCaUVJSJ_KKdiEeKuXyybXhqqNzbdapEE1feud8M78vMu_kiHcYQbN2mQas=w157-h74" style="width:inherit;height:inherit;object-fit:scale-down;object-position:center bottom;" /></div>
+			<div style="width:135px;height:85px;"><img src="https://i.meee.com.tw/LHPFKHJ.jpg" style="width:inherit;height:inherit;object-fit:scale-down;object-position:center bottom;" /></div>
 			</td>
 			<td class="s5" colspan="3" dir="ltr" rowspan="4">高雄大學城哈佛大樓聯絡資訊</td>
 			<td class="s2">&nbsp;</td>
