--- a/Harvard/Page06.html
+++ b/Harvard/Page06.html
@@ -127,7 +127,7 @@
 		<tr style="height: 24px">
 			<td class="s3">&nbsp;</td>
 			<td class="s4" colspan="2" rowspan="3">
-			<div style="width:157px;height:74px;"><img src="https://lh7-rt.googleusercontent.com/u/0/sheets/APBGjha3sQXnKiDdkWugF9Teq3hOO8s2KEGvJfY43V77Zo_PaK5XFttuEWuI1KhrQ4t5atEhRgbpzMNz3snhKRtjYpbKLmvXU89XDyzZKw7GRiOf0gL0XjvUrEzap6Z8BazfGUSFVQsjDkoIx_t1KOZG9HY3OErADmThvZRXLVw815EisQ2hmtf3l01Ti1QTk35Wb3PL7MAsK9EIUiNHGXNi_ENEMuoqUt5-8dpriJPHEsZjGbLkHJPKlb1wi0qg8npbsQz6RBnd9Qtewtaj1BHP-2_BlM0DNv2MgFguehtKt8Ay-3Be4zOXuuK8DiR0E_ZsL9OrsDntIXKIMdYMj3t408zSZWVvnis4AZw8YJ-e6rEUJCeiYqHw81TvX3B6EH_o82MR390-0RFC5NT_FnmSR7ixZl0r1NgQ0hBKLJVDfE9nPhH882DO5hjz9Mq3PUAF6Eyajr1odKzGHOHqr_pyo2oSCzoGHPOdwrojcaYK9NzwmK8qLDxn-XtX-XRzq-0h-dfvnHlEYZFcAIDnouFdxTKXaHcA9dKQ1IglBC-Q_5lTZwdrZ14hkmykQ_s4AaC88aSDfOqr3IWsRaaOOb3KuYnamfa1ULUFxzrjKyEAMgGRzs8feaacPsYUdYnedAodoYkV80Okg1-IE5M5-4pxTDl_a3r-HELOnVFeDvC3H1stpE78VivV94PhF95GQkuDSEQj0DDejz2axPCtIDDTsZ-GhVWJN4V_Q69mkOkDMZ99blSC3XbaxgVhcOR2w9SuSjU1_GEuObl9GGFDw-1G7yifu-WqwaR_lSPXPmUnyZJRJYHS-F2bvuX-tefCuREVr9JlossT2FGFTgQULDggyMZKc5Hd05pWR1onBBNb32SKAqb6txX2slReBzGJqAr_KfpqEHam48_2YOfZ5ztwzEd_tN3K3GKP79T4Hsg-Ae44GUim9XhiNfw87spCXJ9e9vBtWrndQqcoAzqgCgeGUjuR5Pu5ChaIruASZdNZg7hLXI_JiW7qBoTTytaT5SlSkgDr_ij9oickb6eWtK98wlF5k0Onen33yrk7fR1E_eMOybbhAg_f=w157-h74" style="width:inherit;height:inherit;object-fit:scale-down;object-position:center bottom;" /></div>
+			<div style="width:135px;height:85px;"><img src="https://i.meee.com.tw/LHPFKHJ.jpg" style="width:inherit;height:inherit;object-fit:scale-down;object-position:center bottom;" /></div>
 			</td>
 			<td class="s5" colspan="2" dir="ltr" rowspan="4">高雄大學城哈佛大樓月行事曆</td>
 			<td class="s6" dir="ltr" rowspan="3">&nbsp;</td>
