--- a/Harvard/Page06.html
+++ b/Harvard/Page06.html
@@ -149,7 +149,7 @@
 		<tr style="height: 24px">
 			<td class="s7">&nbsp;</td>
 			<td class="s9" colspan="5" rowspan="20">
-			<div style="width:954px;height:499px;"><img src="https://lh7-rt.googleusercontent.com/u/0/sheets/APBGjhY0RNkotxLYqUp2DJExMOPIJLFH43154Xv72dtlOn2N_h-c0aw7FQ_xjI4zOCAxaJhlGwmM_10-5g7WedU75f-hv0J1E2UbE86LkxORG0AxRssfKjwwRlLfh-fN0EQrgilme1X9Hp1YdoAcCGDKE9oPXr2VprPJpl0tTg57-Zzmvu8gQRCGcRIIJfVBzezkItCyC7Qen9XOhYASYSmeOd8bao7jLZnVYfimcXSKlBCDAMbCp1lmuagywkRfWPI8yYdun1LZkM4USKjjE2HdrVp3v2p5OxHAfQXJH1ClyD7Th8WFHg3Ah9sBS6R-IvG2ZMNLJxQCJOH-GmhKFLlM0Fq3jS-rs09AFcAfdmHS3pU2pR_a1KJ2MO3k1Z_48x87BWuZO7h_3gZjytj96Z5a9O0va-ahLCHO1_R7aPyr8IumAt_5b5NwpPyU8pMeUtHuLlkLOVgWtonfq0TVikX7h9cx_xD5CvWItH5mWBTMhyJcyDKVOFbnZruuS-8ImjlfMf8BO63I4WSRE_peJYk2XbkZu3MufW3I5Y9FPxVWM2K8dXAYKGeABIJMvVnvYZyW7Md62w_BxsRmUXiICkMjuhd0aRs3cnDNz3e0nm32TnHzXVfymaJRAycyzb5alS_bPaXVWYGUKEj78vDIkwX-p2c0nHMvOxjcRlze8O7pqcGibWnk2ew_6-H4Am0Hr_PKyON9rHq6OzI9Mn4_WC4qa7yk1nkJaYbCzzO3nD73zdek3RScpsxfpFg3wUsQgNaBxW9HumDtt0Rf5DbCcRHj9s1NLxkmdgze3YXarDKbRPENDGotn5_KRlOMfosRgwPvUgzmP68hKfyexvqRNgGmtGUqLGs3GGUq7xyzCBVmyzeQcZzqqtzbUv9yoNEakTLM025kjbVl4nDmloHC4jGGv-0n4SAjUct3PttwqIrCx8JyP_2vpH2UfLQ8Q1I7PZxhRk9PC728o4gIXwSTs6U2zOSYxxZvKswHhvJ5bmsmOIVZpdvwEkUv9xahqnZIC7pg3BAHbCgg0hylq_oWRpJ0nF1UHTi4UuY=w954-h499" style="width:inherit;height:inherit;object-fit:scale-down;object-position:center center;" /></div>
+			<div style="width:955px;height:500px;"><img src="https://i.meee.com.tw/ilNkWON.jpg" style="width:inherit;height:inherit;object-fit:scale-down;object-position:center center;" /></div>
 			</td>
 			<td class="s2">&nbsp;</td>
 		</tr>
