--- a/Harvard/Page06.html
+++ b/Harvard/Page06.html
@@ -245,7 +245,7 @@
 		</tr>
 		<tr style="height: 24px">
 			<td class="s12">&nbsp;</td>
-			<td class="s13" colspan="5" dir="ltr">&copy; 2024 Kaohsiung Harvard Building Management Committee.All Rights Reserved.Design by CHIANG.</td>
+			<td class="s13" colspan="5" dir="ltr">&copy; 2024 Kaohsiung Harvard Building Management Committee.All Rights Reserved.Design by PEI CHIANG.</td>
 			<td class="s2">&nbsp;</td>
 		</tr>
 	</tbody>
