--- a/Harvard/Page06.html
+++ b/Harvard/Page06.html
@@ -127,7 +127,7 @@
 		<tr style="height: 24px">
 			<td class="s3">&nbsp;</td>
 			<td class="s4" colspan="2" rowspan="3">
-			<div style="width:135px;height:85px;"><img src="https://meee.com.tw/98J8pyt" style="width:inherit;height:inherit;object-fit:scale-down;object-position:center bottom;" /></div>
+			<div style="width:135px;height:85px;"><img src="https://i.meee.com.tw/98J8pyt.png" style="width:inherit;height:inherit;object-fit:scale-down;object-position:center bottom;" /></div>
 			</td>
 			<td class="s5" colspan="2" dir="ltr" rowspan="4">高雄大學城哈佛大樓月行事曆</td>
 			<td class="s6" dir="ltr" rowspan="3">&nbsp;</td>
