--- a/Harvard/index.html
+++ b/Harvard/index.html
@@ -135,7 +135,7 @@
 		<tr style="height: 24px">
 			<td class="s4">&nbsp;</td>
 			<td class="s5" colspan="2" rowspan="3">
-			<div style="width:157px;height:74px;"><img src="https://lh7-rt.googleusercontent.com/u/0/sheets/APBGjhafm8Ksl7_-DsULvt7QQxtMdjoKHSlulsewMP7dRBzi-Z6_2QJZgdctYxueBpJjH6qAOd_BiTZ6S0ZF_B7RZkA8U_M_zw8A1XkPu4dpVpf3YDyhcltdpO8ZK58CVPyOWiD_iTM3HYwLvoH2Li9xsKmZwv48564QofrTRO-HC6JYJ3EKPC9bipNpLsupixYEqs0xDYYRZq6zfF3aFsaPrPeh-LTKwFyo4EagTiTWqTYfBt4au8AOQD09ya-S1nXlIj-6BRcuhremjsyqvZUOKQZqbUldVDpZZdoEMatzHDuSN2K1Iw5N5xupszZBgrsHR11lbIBRbbdvSge29C7ApiZ6Qn6OnUWR5nTyAwnokVsi9t0iB-lULd2f_BG34nchN-mEAMIBXxNkaC9sPV36eQPNpJjPYJ9vEKGFUe7ogLWqQaln_oVDmlabY88EViPYVyrI9wujBOs0db9hgOB8hkxMdzLzR-4J-N7i9N4x4pBsVE7DYJnpolVAtGDF22gAOSkKLpRlHQc48Fw6-FrZ_b6yi5pS1B_v-Ekhy-_BE-i6YIaefrsJkzsdNYAsQVfg2ovzLR8c_Z15X3Eqfty4pCVt9xl0i5sNri-lTFmJc1UISQQUptHpMoCCW5oLHwFsyF4IS-Noxh41tOw2oJuNZzj4SuO6A_PD1oJh8CdjgzKpR1JymxKfu0q1Ym8Ob_QQLwZFD_1nWiP584ubkXJbxHUiqn_mLM91O6x9ztkmlA5g8alskyMOyLIcLYghvo2CQCfsUszVJ1_lSXh9RqcmBHYVSDiJVGnZ2eYDsMDhvgv9Ftw4T8a-px9l3LKogJcYAnmow3ialne7e3mInaIe0FcB18S6lmJrYpAtUu53mw9PRwpPWOVAdHMzm8phAc_SH0fKz7U2h_C-BGzulZSgQiQCnnW7aGjJ6MNqWlHY8QKymg2-lLqUjUa4yw_ZDAPOWlwY3Bzez4Xe5-NDKJHgTYw3xm756Ap7y2prYpSac0rEBo6p9l4ny0FIDy2J4IGIDCSrr1RLy6z4aVapy8JdpT6G39Ahk3A=w157-h74" style="width:inherit;height:inherit;object-fit:scale-down;object-position:center bottom;" /></div>
+			<div style="width:135px;height:85px;"><img src="https://i.meee.com.tw/LHPFKHJ.jpg" style="width:inherit;height:inherit;object-fit:scale-down;object-position:center bottom;" /></div>
 			</td>
 			<td class="s6" colspan="3" dir="ltr" rowspan="4">高雄大學城哈佛大樓修繕追蹤<br />
 			REPAIR TRACKING</td>
