--- a/Harvard/Page06.html
+++ b/Harvard/Page06.html
@@ -149,7 +149,7 @@
 		<tr style="height: 24px">
 			<td class="s7">&nbsp;</td>
 			<td class="s9" colspan="5" rowspan="20">
-			<div style="width:955px;height:500px;"><img src="https://i.meee.com.tw/OFoGQwV.png" style="width:inherit;height:inherit;object-fit:scale-down;object-position:center center;" /></div>
+			<div style="width:955px;height:500px;"><img src="https://i.meee.com.tw/vflbbJH.png" style="width:inherit;height:inherit;object-fit:scale-down;object-position:center center;" /></div>
 			</td>
 			<td class="s2">&nbsp;</td>
 		</tr>
