--- a/Harvard/Page06.html
+++ b/Harvard/Page06.html
@@ -144,12 +144,12 @@
 		<tr style="height: 24px">
 			<td class="s7" dir="ltr">&nbsp;</td>
 			<td class="s7" colspan="2" dir="ltr">&nbsp;</td>
-			<td class="s8" colspan="2">📅 2024/11/07 19:00</td>
+			<td class="s8" colspan="2">📅 2024/12/17 19:00</td>
 		</tr>
 		<tr style="height: 24px">
 			<td class="s7">&nbsp;</td>
 			<td class="s9" colspan="5" rowspan="20">
-			<div style="width:955px;height:500px;"><img src="https://i.meee.com.tw/qSuZtUT.png" style="width:inherit;height:inherit;object-fit:scale-down;object-position:center center;" /></div>
+			<div style="width:955px;height:500px;"><img src="https://i.meee.com.tw/Ej1PH3y.png" style="width:inherit;height:inherit;object-fit:scale-down;object-position:center center;" /></div>
 			</td>
 			<td class="s2">&nbsp;</td>
 		</tr>
