--- a/Harvard/ai.html
+++ b/Harvard/ai.html
@@ -31,32 +31,18 @@
             margin: 100px auto 0; /* 上邊距避免被 Logo 遮擋 */
             padding: 20px;
         }
-
-        /* 導航列樣式 (可選) */
-        nav {
-            background-color: #f8f9fa;
-            padding: 15px;
-            margin-bottom: 20px;
-        }
-
-        nav a {
-            text-decoration: none;
-            color: #333;
-            margin-left: 30px;
-        }
 	</style>
 </head>
 <body><!-- Logo 位置 -->
 <header><img alt="網站Logo" class="logo" src="your-logo.png" /></header>
-<!-- 導航列 (可選) -->
-
-<nav><a href="#home">首頁</a> <a href="#about">關於我們</a> <a href="#contact">聯絡我們</a></nav>
 <!-- 主要內容 -->
 
 <div class="content">
-<h1>歡迎來到我們的網站</h1>
+<h1>歡迎來到哈佛大樓 AI 客服中心</h1>
 
-<p>這裡是網站的主要內容區域...</p>
+<p>目前 AI 客服正在訓練中，答覆可能未盡理想，僅供參考</p>
+
+<p>若有需要可向管理委員會或管理室洽詢</p>
 <!-- 更多內容 --></div>
 
 <p>
