--- a/Harvard/ai.html
+++ b/Harvard/ai.html
@@ -34,7 +34,7 @@
 	</style>
 </head>
 <body><!-- Logo 位置 -->
-<header><img alt="網站Logo" class="logo" src="your-logo.png" /></header>
+<header><img alt="網站Logo" class="logo" src="https://i.meee.com.tw/LHPFKHJ.jpg" /></header>
 <!-- 主要內容 -->
 
 <div class="content">
