--- a/Harvard/ai.html
+++ b/Harvard/ai.html
@@ -3,55 +3,92 @@
 <head>
 	<meta charset="UTF-8" />
 	<meta content="width=device-width, initial-scale=1.0" name="viewport" />
-	<title>簡單網頁設計</title>
-	<style type="text/css">/* 重置默認樣式 */
-        * {
+	<title>哈佛大樓 AI 客服中心</title>
+	<style type="text/css">* {
             margin: 0;
             padding: 0;
             box-sizing: border-box;
         }
 
         body {
-            font-family: Arial, sans-serif;
-            line-height: 1.6;
+            font-family: 'Microsoft JhengHei', Arial, sans-serif;
+            min-height: 100vh;
+            background-color: #f5f5f5;
+        }
+
+        /* 標題列容器 */
+        .header-container {
+            position: fixed;
+            top: 5%;
+            left: 3%;
+            z-index: 999;
+            display: flex;
+            align-items: center;
+            width: 90%;
+            max-width: 1200px;
         }
 
         /* Logo 樣式 */
         .logo {
-            position: fixed;
-            top: 20px;
-            left: 20px;
-            z-index: 999;
-            max-width: 150px; /* 根據需要調整大小 */
+            width: 8vw;
+            min-width: 60px;
+            max-width: 100px;
+            margin-right: 3%;
         }
 
-        /* 內容容器 */
+        /* 網站名稱樣式 */
+        .site-title {
+            font-size: calc(18px + 1.2vw);
+            color: #2c3e50;
+            text-shadow: 1px 1px 2px rgba(0,0,0,0.1);
+            white-space: nowrap;
+        }
+
+        /* 主要內容區域 */
         .content {
-            max-width: 1200px;
-            margin: 50px auto 0; /* 上邊距避免被 Logo 遮擋 */
-            padding: 20px;
+            width: 90%;
+            margin: 18vh auto 0;
+            padding: 5%;
+            background-color: white;
+            border-radius: 10px;
+            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+        }
+
+        /* 響應式調整 */
+        @media (max-width: 768px) {
+            .header-container {
+                top: 3%;
+                left: 5%;
+                width: 95%;
+            }
+          
+            .site-title {
+                font-size: calc(16px + 1vw);
+                white-space: normal;
+            }
+          
+            .content {
+                margin-top: 22vh;
+                padding: 8%;
+            }
         }
 	</style>
 </head>
-<body><!-- Logo 位置 -->
-<header><img alt="網站Logo" class="logo" src="https://i.meee.com.tw/LHPFKHJ.jpg" /></header>
-<!-- 主要內容 -->
+<body>
+<header class="header-container"><img alt="哈佛大樓 Logo" class="logo" src="https://i.meee.com.tw/LHPFKHJ.jpg" />
+<h1 class="site-title">哈佛大樓 AI 客服中心</h1>
+</header>
 
 <div class="content">
-<h1>歡迎來到哈佛大樓 AI 客服中心</h1>
+<h2>歡迎使用智能客服系統</h2>
 
-<p>目前 AI 客服正在訓練中，答覆可能未盡理想，僅供參考</p>
-
-<p>若有需要可向管理委員會或管理室洽詢</p>
-<!-- 更多內容 --></div>
-
-<p>
+<p>這裡是 AI 客服中心的主要服務內容區域，提供 24 小時智能問答服務。如有任何疑問，歡迎隨時提出。</p>
+<!-- 可添加更多客服相關內容 --></div>
 <iframe
- src="https://udify.app/chatbot/ZGE47RtleOPXjcK9"
+ src="https://udify.app/chatbot/ht7zVU7lehxPGJNE"
  style="width: 100%; height: 100%; min-height: 700px"
  frameborder="0"
  allow="microphone">
 </iframe>
-</p>
 </body>
 </html>
