--- a/Harvard/ai.html
+++ b/Harvard/ai.html
@@ -13,7 +13,7 @@
         body {
             font-family: 'Microsoft JhengHei', Arial, sans-serif;
             min-height: 100vh;
-            background-color: #f5f5f5;
+            background-color: #FFFFFF;
         }
 
         /* 標題列容器 */
@@ -81,8 +81,6 @@
 
 <div class="content">
 <h2>歡迎使用智能客服系統</h2>
-
-<p>這裡是 AI 客服中心的主要服務內容區域，提供 24 小時智能問答服務。如有任何疑問，歡迎隨時提出。</p>
 <!-- 可添加更多客服相關內容 --></div>
 <!-- AI -->
 <iframe
