--- a/Harvard/ai.html
+++ b/Harvard/ai.html
@@ -83,13 +83,11 @@
 <table class="main-table">
 	<tbody>
 		<tr>
-			<td class="logo-cell"><img alt="哈佛大樓 Logo" class="logo" src="https://i.meee.com.tw/LHPFKHJ.jpg" /></td>
 			<td class="title-cell">
-			<div class="main-title">哈佛大樓 AI 客服中心</div>
+			<div class="main-title"><img alt="哈佛大樓 Logo" class="logo" src="https://i.meee.com.tw/LHPFKHJ.jpg" style="width: 89px; background-color: rgb(255, 255, 255);" /><span style="font-size:20px;">哈佛大樓 AI 客服中心</span></div>
 
 			<div class="sub-title">測試中...</div>
-
-<!-- AI -->
+				<!-- AI -->
 <iframe
  src="https://udify.app/chatbot/ZGE47RtleOPXjcK9"
  style="width: 100%; height: 100%; min-height: 700px"
