--- a/Harvard/ai.html
+++ b/Harvard/ai.html
@@ -45,12 +45,30 @@
             padding: 25px;
             text-align: center;
             border-left: 1px solid #000;
+            /* 新增垂直居中设置 */
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            min-height: 150px; /* 根据内容高度调整 */
         }
 
         .main-title {
             font-size: 2.2em;
             color: #2c3e50;
-            margin-bottom: 8px;
+            margin: 0; /* 移除原有下边距 */
+            /* 新增垂直居中修正 */
+            line-height: 1.2;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            height: 100%; /* 撑满父容器 */
+        }
+
+        @media (max-width: 768px) {
+            .title-cell {
+                min-height: 120px; /* 移动端调整 */
+                padding: 15px;
+            }
         }
 
         .sub-title {
