--- a/Harvard/ai.html
+++ b/Harvard/ai.html
@@ -54,7 +54,7 @@
 
         .main-title {
             /* 使用 clamp() 實現動態字體大小 */
-            font-size: clamp(20px, 4.5vw, 42px); /* 最小24px > 動態4.5vw > 最大42px */
+            font-size: clamp(14px, 4.5vw, 42px); /* 最小24px > 動態4.5vw > 最大42px */
             color: #2c3e50;
             margin: 0;
             line-height: 1.2;
@@ -70,7 +70,7 @@
         }
 
         .sub-title {
-            font-size: clamp(14px, 1.8vw, 20px); /* 按主標題比例縮放 */
+            font-size: clamp(12px, 1.8vw, 20px); /* 按主標題比例縮放 */
             margin-top: 0.8em; /* 使用相對單位 */
         }
 
@@ -106,11 +106,11 @@
 			<td class="title-cell">
 			<div class="main-title"><img alt="哈佛大樓 Logo" class="logo" src="https://i.meee.com.tw/LHPFKHJ.jpg" style="width: 89px; background-color: rgb(255, 255, 255);" />
 			<span style="font-size:28px;">哈佛大樓 AI 客服中心</span></div>
-			<div class="sub-title">測試中...</div>
+			<div class="sub-title">測試中...1</div>
 			<!-- AI -->
 			<iframe
 			 src="https://udify.app/chatbot/ZGE47RtleOPXjcK9"
-			 style="width: 100%; height: 90%; min-height: 600px"
+			 style="width: 100%; height: 85%; min-height: 600px"
 			 frameborder="0"
 			 allow="microphone">
 			</iframe>
