--- a/Harvard/ai.html
+++ b/Harvard/ai.html
@@ -105,8 +105,8 @@
 		<tr>
 			<td class="title-cell">
 			<div class="main-title"><img alt="哈佛大樓 Logo" class="logo" src="https://i.meee.com.tw/LHPFKHJ.jpg" style="width: 89px; background-color: rgb(255, 255, 255);" />
-			<span class="title-cell">哈佛大樓 AI 客服中心</span></div>
-			<div class="sub-title">測試中...3</div>
+			<span>哈佛大樓 AI 客服中心</span></div>
+			<div class="sub-title">測試中...5</div>
 			<!-- AI -->
 			<iframe
 			 src="https://udify.app/chatbot/ZGE47RtleOPXjcK9"
