--- a/Harvard/ai.html
+++ b/Harvard/ai.html
@@ -62,7 +62,12 @@
             align-items: center;
             justify-content: center;
             height: 100%;
-          
+	    /* 新增垂直居中修正 */
+            line-height: 1.2;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            height: 100%; /* 撑满父容器 */
             /* 增加字距調整 */
             letter-spacing: -0.5px;
             word-spacing: 2px;
