--- a/Harvard/ai.html
+++ b/Harvard/ai.html
@@ -94,7 +94,7 @@
         @media (max-width: 480px) {
             .main-title {
                 font-size: clamp(12px, 7vw, 20px);
-                flex-direction: column; /* 文字垂直排列 */
+                <!-- flex-direction: column; /* 文字垂直排列 */ -->
                 gap: 5px;
             }
           
@@ -110,7 +110,7 @@
 		<tr>
 			<td class="title-cell">
 			<div class="main-title"><img alt="哈佛大樓 Logo" class="logo" src="https://i.meee.com.tw/LHPFKHJ.jpg" style="width: 89px; background-color: rgb(255, 255, 255);" />
-			哈佛大樓 AI 客服中心8</div>
+			哈佛大樓 AI 客服中心9</div>
 			<!-- <div class="sub-title">測試中...5</div> -->
 			<!-- AI -->
 			<iframe
