--- a/Harvard/ai.html
+++ b/Harvard/ai.html
@@ -93,7 +93,7 @@
         /* 超小屏幕特殊處理 */
         @media (max-width: 480px) {
             .main-title {
-                font-size: clamp(12px, 7vw, 20px);
+                font-size: clamp(18px, 7vw, 30px);
                 <!-- flex-direction: column; /* 文字垂直排列 */ -->
                 gap: 5px;
             }
@@ -110,7 +110,7 @@
 		<tr>
 			<td class="title-cell">
 			<div class="main-title"><img alt="哈佛大樓 Logo" class="logo" src="https://i.meee.com.tw/LHPFKHJ.jpg" style="width: 89px; background-color: rgb(255, 255, 255);" />
-			哈佛大樓 AI 客服中心9</div>
+			哈佛大樓 AI 客服中心</div>
 			<!-- <div class="sub-title">測試中...5</div> -->
 			<!-- AI -->
 			<iframe
