--- a/Harvard/ai.html
+++ b/Harvard/ai.html
@@ -111,10 +111,10 @@
 			<td class="title-cell">
 			<div class="main-title"><img alt="哈佛大樓 Logo" class="logo" src="https://i.meee.com.tw/LHPFKHJ.jpg" style="width: 89px; background-color: rgb(255, 255, 255);" />
 			哈佛大樓 AI 客服中心</div>
-			<!-- <div class="sub-title">測試中...5</div> -->
+			<!-- <div class="sub-title">2/28 測試中...</div> -->
 			<!-- AI -->
 			<iframe
-			 src="https://udify.app/chatbot/ZGE47RtleOPXjcK9"
+			 src="https://udify.app/chat/ZhCYPwqfaRVaCFUd"
 			 style="width: 100%; height: 100%; min-height: 650px"
 			 frameborder="0"
 			 allow="microphone">
