--- a/Harvard/ai.html
+++ b/Harvard/ai.html
@@ -110,7 +110,7 @@
 		<tr>
 			<td class="title-cell">
 			<div class="main-title"><img alt="哈佛大樓 Logo" class="logo" src="https://i.meee.com.tw/LHPFKHJ.jpg" style="width: 89px; background-color: rgb(255, 255, 255);" />
-			哈佛大樓 AI 客服中心</div>
+			哈佛大樓 AI 客服助理</div>
 			<!-- <div class="sub-title">2/28 測試中...</div> -->
 			<!-- AI -->
 			<iframe
