--- a/Harvard/A.html
+++ b/Harvard/A.html
@@ -109,8 +109,8 @@
 	<tbody>
 		<tr>
 			<td class="title-cell">
-			<div class="main-title"><img alt="哈佛大樓 Logo" class="logo" src="https://i.meee.com.tw/LHPFKHJ.jpg" style="width: 89px; background-color: rgb(255, 255, 255);" />
-			哈佛大樓 AI 客服助理</div>
+			<!-- <div class="main-title"><img alt="哈佛大樓 Logo" class="logo" src="https://i.meee.com.tw/LHPFKHJ.jpg" style="width: 89px; background-color: rgb(255, 255, 255);" />
+			哈佛大樓 AI 客服助理</div>  -->
 			<!-- <div class="sub-title">2/28 測試中...</div> -->
 			<!-- AI -->
 			<iframe
