--- a/Harvard/A.html
+++ b/Harvard/A.html
@@ -115,7 +115,7 @@
 			<!-- AI -->
 			<iframe
 			 src="https://udify.app/chat/8fqqhuBm7tmU0g3y"
-			 style="width: 100%; height: 100%; min-height: 650px"
+			 style="width: 100%; height: 100%; min-height: 100%"
 			 frameborder="0"
 			 allow="microphone">
 			</iframe>
