--- a/Harvard/A.html
+++ b/Harvard/A.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8" />
 	<meta content="width=device-width, initial-scale=1.0" name="viewport" />
-	<title>哈佛大樓 AI 客服中心</title>
+	<title>哈佛大樓 AI 智能助理</title>
 	<style type="text/css">* {
             margin: 0;
             padding: 0;
