--- a/Harvard/B.html
+++ b/Harvard/B.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta content="target-densitydpi=device-dpi,user-scalable=1,minimum-scale=0.1,maximum-scale=2.5,initial-scale=1,width=device-width" name="viewport" />
+	<meta content="target-densitydpi=device-dpi,user-scalable=1,minimum-scale=0.1,maximum-scale=2.5,width=device-width" name="viewport" />
 	
 	<title>高雄大學城哈佛大樓 - Google 雲端硬碟</title>
 	
