--- a/Harvard/D.html
+++ b/Harvard/D.html
@@ -149,7 +149,8 @@
 		<tr style="height: 24px">
 			<td class="s7">&nbsp;</td>
 			<td class="s9" colspan="5" rowspan="20">
-			<div style="width:955px;height:500px;"><img src="https://i.meee.com.tw/yaeEwAA.png" style="width:inherit;height:inherit;object-fit:scale-down;object-position:center center;" /></div>
+				<!-- 圖片地址 -->
+			<div style="width:955px;height:500px;"><img src="https://i.meee.com.tw/A8Mo9HE.jpg" style="width:inherit;height:inherit;object-fit:scale-down;object-position:center center;" /></div>
 			</td>
 			<td class="s2">&nbsp;</td>
 		</tr>
