--- a/Harvard/A1.html
+++ b/Harvard/A1.html
@@ -1,6 +1,7 @@
 <html>
 <head>
-	<title>HTML Editor - Full Version</title>
+<meta content="width=device-width, initial-scale=1.0" name="viewport" />
+<title>哈佛大樓 AI 智能助理</title>
 </head>
 <body>
 <p>
