--- a/Harvard/A1.html
+++ b/Harvard/A1.html
@@ -6,7 +6,8 @@
 <body>
 <p>
 <iframe allow="microphone" frameborder="0" src="https://udify.app/chat/mfrY8f637LVHLCMu" style="width: 100%; height: 100%; min-height: 700px"></iframe></p>
-<p>高雄大學城哈佛大樓管理委員會</p>
+<!-- <p>高雄大學城哈佛大樓管理委員會</p>
 <p>&copy; 2025 Kaohsiung Harvard Building Management Committee. All Rights Reserved. Design by PEI CHIANG.</p>
+-->
 </body>
 </html>
