--- a/Harvard/A.html
+++ b/Harvard/A.html
@@ -1,15 +1,12 @@
 <html>
 <head>
-<!-- <meta content="width=device-width, initial-scale=1.0" name="viewport" /> -->
+<meta content="width=device-width, initial-scale=1.0" name="viewport" />
 <title>哈佛大樓 AI 智能助理</title>
 </head>
 <body>
 <p>
 <iframe allow="microphone" frameborder="0" src="https://udify.app/chat/mfrY8f637LVHLCMu" style="width: 100%; height: 100%; min-height: 700px"></iframe>
 </p>
-	
-<p>高雄大學城哈佛大樓管理委員會</p>
-<p>&copy; 2025 Kaohsiung Harvard Building Management Committee. All Rights Reserved. Design by PEI CHIANG.</p>
 
 </body>
 </html>
