--- a/Harvard/schedule/index.html
+++ b/Harvard/schedule/index.html
@@ -3,14 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>保養時程</title>
+    <title>高雄大學城保養月曆</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1>保養時程月曆</h1>
+        <h1>高雄大學城保養月曆</h1>
     </header>
     <main>
+        <div id="left-panel">
         <section id="calendar-container">
             <div class="calendar-header">
                 <button id="prevMonth">上個月</button>
@@ -28,15 +29,24 @@
                 <!-- Calendar days will be inserted here by JavaScript -->
             </div>
         </section>
+        </div>
+    <div id="right-panel">
         <section id="daily-plans-container">
             <h2><span id="selectedDate"></span> 的保養計畫</h2>
             <div id="daily-plans-list">
                 <!-- Daily plans will be inserted here by JavaScript -->
             </div>
         </section>
+        <section id="monthly-plans-container">
+            <h2>本月保養計畫</h2>
+            <div id="monthly-plans-list">
+                <!-- Monthly plans will be inserted here by JavaScript -->
+            </div>
+        </section>
+    </div>
     </main>
     <footer>
-        <p>&copy; 2025 保養時程</p>
+        <p>&copy; 2025 高雄大學城保養月曆</p>
     </footer>
     <script src="script.js"></script>
 </body>
