--- a/Harvard/schedule/index.html
+++ b/Harvard/schedule/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>高雄大學城保養月曆</title>
+    <title>大學城哈佛-保養月曆</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1>高雄大學城保養月曆</h1>
+        <h1>大學城哈佛-保養月曆</h1>
     </header>
     <main>
         <div id="left-panel">
@@ -46,7 +46,7 @@
     </div>
     </main>
     <footer>
-        <p>&copy; 2025 高雄大學城保養月曆</p>
+        <p>&copy; 2025 高雄大學城哈佛大樓</p>
     </footer>
     <script src="script.js"></script>
 </body>
