--- a/Harvard/repair/index.html
+++ b/Harvard/repair/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>高雄大學城修繕紀錄</title>
+    <title>大學城哈佛-修繕紀錄</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header role="banner">
-        <h1>高雄大學城修繕紀錄</h1>
+        <h1>大學城哈佛-修繕紀錄</h1>
         <div class="header-controls">
             <select id="yearSelector" aria-label="選擇年度">
                 <option value="">選擇年度...</option>
