--- a/Harvard/schedule_2/index.html
+++ b/Harvard/schedule_2/index.html
@@ -46,8 +46,9 @@
     </div>
     </main>
     <footer>
-        <p>&copy; 2025 高雄大學城哈佛大樓</p>
+        <h2>&copy; 2025 高雄大學城哈佛大樓</h2>
     </footer>
     <script src="script.js"></script>
 </body>
+
 </html>
