Add footer to index.html with copyright notice
Added footer with copyright information.

--- a/Harvard/repair_2/index.html
+++ b/Harvard/repair_2/index.html
@@ -26,6 +26,10 @@
             <!-- 由 JavaScript 動態渲染年度分組與計畫卡片 -->
         </section>
     </main>
+    <footer>
+        <h2>&copy; 2025 高雄大學城哈佛大樓</h2>
+    </footer>
     <script src="script.js"></script>
 </body>
+
 </html>
