--- a/Harvard/schedule_2/index.html
+++ b/Harvard/schedule_2/index.html
@@ -46,11 +46,12 @@
     </div>
     </main>
     <footer>
-        <h2>&copy; <span id="year"></span> 高雄大學城哈佛大樓1</h2>
+        <h2>&copy; <span id="year"></span> 高雄大學城哈佛大樓</h2>
     </footer>
     <script src="script.js"></script>
 </body>
 
 </html>
+
 
 
