--- a/Harvard/repair_2/index.html
+++ b/Harvard/repair_2/index.html
@@ -27,10 +27,11 @@
         </section>
     </main>
     <footer>
-        <h2>&copy; <span id="year"></span> 高雄大學城哈佛大樓2</h2>
+        <h2>&copy; <span id="selectedYear"></span> 高雄大學城哈佛大樓3</h2>
     </footer>
     <script src="script.js"></script>
 </body>
 
 </html>
+
 
