Fix HTML formatting and structure

--- a/Harvard/repair_2/index.html
+++ b/Harvard/repair_2/index.html
@@ -27,12 +27,13 @@
         </section>
     </main>
     <footer>
-        <h2>&copy; <span id="currentYear"></span> 高雄大學城哈佛大樓5</h2>
+        <h2>&copy; <span id="currentYear"></span> 高雄大學城哈佛大樓</h2>
     </footer>
     <script src="script.js"></script>
 </body>
 
 </html>
+
 
 
 
