--- a/Harvard/A.html
+++ b/Harvard/A.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-<title>大學城哈佛-AI智能助理</title>
+<title>大學城哈佛-AI助理</title>
 </head>
 <body>
 <p>
@@ -10,5 +10,6 @@
 
 </body>
 </html>
+
 
 
