--- a/Harvard/repair_2/index.html
+++ b/Harvard/repair_2/index.html
@@ -2,6 +2,7 @@
 <html lang="zh-TW">
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>大學城哈佛-修繕紀錄</title>
     <link rel="stylesheet" href="styles.css">
@@ -37,4 +38,5 @@
     </footer>
     <script src="script.js"></script>
 </body>
+
 </html>
