--- a/Harvard/schedule_2/index.html
+++ b/Harvard/schedule_2/index.html
@@ -2,6 +2,7 @@
 <html lang="zh-TW">
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>大學城哈佛-保養月曆</title>
     <link rel="stylesheet" href="style.css">
@@ -52,6 +53,7 @@
 </body>
 
 </html>
+
 
 
 
